--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -11,7 +11,7 @@ body {
   font-family: Calibri, Arial, sans-serif;
   color: #2a2a2a;
   background-color: #fafafa;
-  word-break: break-word;
+  overflow-wrap: break-word;
 }
 
 .wrapper {
@@ -21,7 +21,7 @@ body {
 }
 
 section {
-  
+  padding-bottom: 25px;
 }
 
 h1 {
@@ -30,15 +30,20 @@ h1 {
   background-color: #b0cce3;
 }
 
+h2,
+h3 {
+  margin-bottom: 8px;
+}
+
 h2 {
   padding: 10px 15px;
-  font-size: 22px;
+  font-size: 26px;
   background-color: #e0e6eb;
 }
 
 h3 {
   padding: 10px 20px;
-  font-size: 20px;
+  font-size: 22px;
   background-color: #ebeced;
 }
 
@@ -49,12 +54,16 @@ h3 {
   align-items: center;
 }
 
+.personal-info {
+  flex: 1 1 auto;
+}
+
 td:last-child {
   font-size: 22px;
   padding: 3px 20px;
 }
 
-figure {
+.photo {
   padding: 10px;
 }
 
@@ -65,4 +74,14 @@ img {
 
 p {
   padding: 5px 10px;
+}
+
+ul {
+  padding: 10px;
+  list-style-position: inside;
+  list-style-type: square;
+}
+
+li {
+  padding: 5px 0 5px 20px;
 }
