--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -8,7 +8,7 @@ body {
   font-style: normal;
   font-size: 18px;
   line-height: 1.4;
-  font-family: Calibri, Arial, sans-serif;
+  font-family: "Calibri", "Arial", sans-serif;
   color: #2a2a2a;
   background-color: #fafafa;
   overflow-wrap: break-word;
@@ -59,8 +59,8 @@ h3 {
 }
 
 td:last-child {
-  font-size: 22px;
   padding: 3px 20px;
+  font-size: 22px;
 }
 
 .photo {
